--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -29,7 +29,7 @@ body {
   border-radius: 0!important;
   margin: $spacer*2 auto;
   &:hover {
-    border-left: 1px solid $primary-color!important;
+    border-left: 10px solid $primary-color!important;
     cursor: pointer;
   }
 }
@@ -57,6 +57,8 @@ body {
 }
 
 .btn {
+  position: relative;
+  overflow: hidden;
   cursor: pointer;
   font-size: 1rem;
   text-transform: uppercase;
@@ -85,19 +87,22 @@ body {
   }
   &:before {
     content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
     background-color: $primary-color;
-    transform: translateX(-70%);
+    transform: translateX(-100%);
     transition: 0.3s;
-  }
-  &:hover {
-    transform: translateX(0%);
   }
 
   &:hover {
-    // color: tint($btn-color, 75%);
+     color: $main-background;
 
     &:before {
       transform: translateX(0);
+      z-index: -1;
     }
   }
 }
