--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -178,6 +178,8 @@ nav {
 // containers
 
 .main-quote-container {
+  width: 80%;
+  margin: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -186,18 +188,21 @@ nav {
 }
 
 .current-quote-container {
+  width:100%;
   min-height: 270px;
 }
 
 // Quote card
 
 .quote-card {
+  margin-left: auto;
+  margin-right:auto;
   padding: $spacer * 3;
   background-color: rgb(31, 32, 34);
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  border-radius: 20px;
   @media (min-width: 768px) {
-    border-radius: 20px;
     width: 600px;
   }
 
@@ -213,6 +218,12 @@ nav {
     margin-bottom: $spacer / 2;
     // padding-top: $spacer * 2;
   }
+  blockquote {
+    @media (min-width: 768px) {
+      margin: $spacer * 2;
+    }
+    margin: $spacer;
+  }
   footer {
     font-size: 0.98rem;
     color: #f1f1f1;
@@ -226,7 +237,7 @@ nav {
 
 .history-title {
   display: none;
-  margin: 0 auto 20px;
+  margin: 20px auto 20px;
   text-align: center;
   color: white;
   &.display {
